--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-	<title>Startup a Corporate Category Bootstrap Responsive Website Template | Home :: W3layouts</title>
+	<title>ZEEL</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
 
