--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ Our product includes a wide range of designing, executing and maintaining landsc
 
 			<!-- //subscribe -->
 		</div>	
-<p>Crafted By LD.</p>
+		<p>Crafted By <a href="http://www.theambrosial.com/"> The Ambrosial Technologies </a></p>
 	</footer>
 	<!-- //footer -->
 
