--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<ul class="menu">
 								<li><a href="index.html" class="active">Home</a></li>
 								<li><a href="#faq">About Us</a></li>
-								<li><a href="#services">Services</a></li>
+								<li><a href="#services">Products</a></li>
 								
 								<li><a href="#contact">Contact Us</a></li>
 							</ul>
