--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ A leading provider for exclusive landscape solutions -supply,execution and maint
 		<div class="container py-xl-5 py-lg-3">
 			<div class="row">
 				<div class="col-lg-6 about-right-faq">
-					<h6>About Royal Micro</h6>
+					<h6>About ZEEL</h6>
 					<h3 class="text-da">25 Years of Industry Experience</h3>
 					<p class="mt-4">A leading provider for exclusive landscape solutions -supply,execution and maintenance. The company was founded in 2000 with explosive growth in green technology. Our years of experience and knowledge have helped us to develop successful processes.</p>
 					<ul class="w3l-right-book mt-4">
